objects/pse__Resource_Skill_Request__c.object
<CustomObject>
    <customHelpPage>pse__ResourceSkillRequestHelp</customHelpPage>
    <description>Represents the skills or certifications requested for a resource prior to staffing them on a project. A skill or certification can be marked as primary to identify the primary skill desired in the resource request.</description>
    <fields>
        <fullName>pse__Is_Primary__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is this the primary skill / certification for the request?</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Match_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Match all or match any preference.</description>
        <label>Match All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Minimum_Rating__c</fullName>
        <label>Minimum Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Limited Exposure</fullName>
                </value>
                <value>
                    <fullName>2 - Some Familiarity</fullName>
                </value>
                <value>
                    <fullName>3 - Comfortable</fullName>
                </value>
                <value>
                    <fullName>4 - Strong</fullName>
                </value>
                <value>
                    <fullName>5 - Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Resource Skill Requests</relationshipLabel>
        <relationshipName>Resource_Skill_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Skill_Certification__c</fullName>
        <label>Skill / Certification</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipLabel>Resource Skill Requests</relationshipLabel>
        <relationshipName>Resource_Skill_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Skill_Record_Type__c</fullName>
        <description>The record type of the associated skill.</description>
        <formula>pse__Skill_Certification__r.RecordType.Name</formula>
        <inlineHelpText>The record type of the associated skill.</inlineHelpText>
        <label>Skill Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Skill_or_Certification__c</fullName>
        <formula>IF(
		    ISPICKVAL(pse__Skill_Certification__r.pse__Skill_Or_Certification__c,&apos;Skill&apos;), &apos;Skill&apos;, 
		    IF(
		        ISPICKVAL(pse__Skill_Certification__r.pse__Skill_Or_Certification__c, &apos;Certification&apos;), &apos;Certification&apos;, 
		        &apos;Unknown&apos;
		    )
		)</formula>
        <label>Skill or Certification</label>
        <type>Text</type>
    </fields>
    <label>Resource Skill Request</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SkillRequest{0000000}</displayFormat>
        <label>Resource Skill Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Skill Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Rating_Required_For_Skill</fullName>
        <active>false</active>
        <errorConditionFormula>AND( pse__Skill_or_Certification__c = &apos;Skill&apos;, ISPICKVAL( pse__Minimum_Rating__c, &quot;&quot; ))</errorConditionFormula>
        <errorDisplayField>pse__Minimum_Rating__c</errorDisplayField>
        <errorMessage>Minimum rating is required for skill requests.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Resource_Request_Required</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( pse__Resource_Request__c ) = 0</errorConditionFormula>
        <errorDisplayField>pse__Resource_Request__c</errorDisplayField>
        <errorMessage>Resource request is required</errorMessage>
    </validationRules>
</CustomObject>